--- a/week01/first-page.html
+++ b/week01/first-page.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>My First Page</h1>
-    <p>My favorite color is: </p>
+    <p>My favorite color is: Green </p>
+    <p>I am learning Web development!</p>
+    <h2>Did this work?</h2>
+    <p>I do believe this worked!</p>
 </body>
 </html>
