Added profile picture, bio, and details

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Cameron Galloway | WDD 130</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
-
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Cameron Galloway | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Cameron Galloway" width="200">
+        <p>Hello I am Cameron Galloway. I am from Utah, USA. I am a Furniture Finisher (stain and lacquer furniture) for The Church of Jesus Christ of Latter-day Saints. I enjoy riding my bikes, both my peddal and motorcycle, when the weather is good. I also enjoys hiking in the mountians around Utah, diving into a good book, playing Dungeons & Dragons, and playing video games with my friends and family.</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 | Cameron Galloway | Utah</p>
+    </footer>
 </body>
 </html>
