Added pcitures, links, and text

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name = "description" content = "A basic HTML structure example using semantic HTML elements">
+    <meta name = "author" content = "Cameron Galloway">
 </head>
 <body>
-    
+    <header> 
+        <img src="images/basic-logo.png" alt="Computer showing HTML code" width = '128' height = '128'>
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="https://github.com/dashboard">GitHub Main Page</a>
+            </li>
+            <li>
+                <a href="https://www.churchofjesuschrist.org/?lang=eng">The Church of Jesus Christ of Latter-Day Saints Homepage</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <h1>
+            Basic HTML Structure
+        </h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dicta.</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, vero.</p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/bountiful-utah/400x250/bountiful-temple-766347-wallpaper.jpg" alt="Bountiful Temple" width = 200>
+    </aside>
+    <footer>
+        <p>Cameron Galloway</p>
+    </footer>
 </body>
 </html>
