Added State description, edited css for aside

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Cameron Galloway, WDD 130, Personal Home Page">
+    <meta name="author" content="Cameron Galloway">
     <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +20,11 @@
         <img src="images/profile.jpg" alt="Cameron Galloway" width="200">
         <p>Hello I am Cameron Galloway. I am from Utah, USA. I am a Furniture Finisher (stain and lacquer furniture) for The Church of Jesus Christ of Latter-day Saints. I enjoy riding my bikes, both my peddal and motorcycle, when the weather is good. I also enjoys hiking in the mountians around Utah, diving into a good book, playing Dungeons & Dragons, and playing video games with my friends and family.</p>
     </main>
+    <aside>
+        <h2>Utah, USA</h2>
+        <img src="images/bryce-canyon.jpg" alt="Bryce Canyon">
+        <p>Utah is a western U.S. state known for its striking natural landscapes, rich history, and outdoor recreation. It features diverse geography ranging from the snow-capped peaks of the Wasatch Mountains to the red rock deserts and dramatic arches of the south. Utah’s blend of natural beauty, adventure, and heritage makes it a unique and captivating place.</p>
+    </aside>
     <footer>
         <p>&copy; 2025 | Cameron Galloway | Utah</p>
     </footer>
