--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="Cameron Galloway, WDD 130, Personal Home Page">
+    <meta name="description" content="Cameron Galloway's home page for WDD 130, this is used to display changes and edits made throughout the term.">
     <meta name="author" content="Cameron Galloway">
     <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
