--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="description" content="Cameron Galloway's home page for WDD 130, this is used to display changes and edits made throughout the term.">
-    <meta name="Cameron Galloway" content="Cameron Galloway">
+    <meta name="author" content="Cameron Galloway">
     <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
