--- a/week03/class-and-id.html
+++ b/week03/class-and-id.html
@@ -29,7 +29,7 @@
 }</code></pre>
     </div>
 
-    <div class="box highlight">
+    <div>
         <p>This div has two classes assigned to it of <strong>box</strong> and <strong>highlight</strong>. So the div
             will have the styles of both classes applied.</p>
         <pre><code class="html">&lt;div class="box highlight"&gt; ... &lt;/div&gt;</code></pre>
@@ -51,6 +51,9 @@
   color: white;
   width: fit-content;
 }</code></pre>
+    <div id = "note">
+        <p>Testing the note ID</p>
+    </div>
     </div>
 
     <div id="note">
@@ -64,6 +67,8 @@
             <li><strong>DO NOT</strong> start class or ID names with numbers</li>
             <li><strong>DO NOT</strong> use spaces in class or ID names (use hyphens or underscores)</li>
         </ul>
+    
+    </div>
     </section>
 
 
