--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | Cameron Galloway</title>
     <meta name="description" content="Cameron Galloway's home page for WDD 130, this is used to display changes and edits made throughout the term.">
     <meta name="author" content="Cameron Galloway">
     <link rel="stylesheet" href="styles/styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Cameron Galloway | WDD 130</h1>
         <img src="images/profile.jpg" alt="Cameron Galloway" width="200">
         <p>Hello I am Cameron Galloway. I am from Utah, USA. I am a Furniture Finisher (stain and lacquer furniture) for The Church of Jesus Christ of Latter-day Saints. I enjoy riding my bikes, both my peddal and motorcycle, when the weather is good. I also enjoys hiking in the mountians around Utah, diving into a good book, playing Dungeons & Dragons, and playing video games with my friends and family.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/nuku'alofa-tonga-temple?lang=eng" target="_blank">Nuku'alofa Tonga Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/bountiful-utah-temple?lang=eng" target="_blank">Bountiful Utah Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Utah, USA</h2>
         <img src="images/bryce-canyon.jpg" alt="Bryce Canyon">
         <p>Utah is a western U.S. state known for its striking natural landscapes, rich history, and outdoor recreation. It features diverse geography ranging from the snow-capped peaks of the Wasatch Mountains to the red rock deserts and dramatic arches of the south. Utah’s blend of natural beauty, adventure, and heritage makes it a unique and captivating place.</p>
