made changes to footer, and small pic

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhiteWater Rafting</title>
+    <title>WhiteWater Rafting Co.</title>
     <meta name="description" content="This is a webpage about a white water rafting company. Using this website and company allows you to book trips for white water rafting, camping, hiking, and similar activities. It also provides information about the company itself and its credentials to ensure you have an enjoyable experience using their services.">
     <meta name="author" content="Cameron Galloway">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -25,9 +25,9 @@
     <main>
         <div class="hero">
             <img src="images/river-rafting-above.jpg" alt="An aerial view of a red river raft on a white-water river. There are five people inside the raft: four are wearing blue helmets, and one is wearing a yellow helmet. All five people are holding oars and appear to be rafting down the river.">
-            <h1>WhiteWater Rafting</h1>
+            <h1>WhiteWater Rafting Co.</h1>
             <article>
-                <img src="images/happy-clients.jpg" alt="A photograph of eleven people. Five of them are wearing yellow vests, four are wearing red vests, and two are wearing orange vests. All of the people are wearing wetsuits of varying sizes and colors. Four of them are holding oars in their hands in varying positions. Everyone is on or around an orange river raft. The group appears happy and excited, as if celebrating a successful rafting trip.">
+                <img src="images/happy-clients.jpg" alt="A photograph of eleven people. Five of them are wearing yellow vests, four are wearing red vests, and two are wearing orange vests. All of the people are wearing wetsuits of varying sizes and colors. Four of them are holding oars in their hands in varying positions.">
                 <p>Company Purpose: Enjoy outdoors like never before!</p>
             </article>
         </div>
@@ -40,7 +40,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;2025 - WhiteWater Rafting - Cameron Galloway</p>
+        <p>&copy;2025 - WhiteWater Rafting Co. - Cameron Galloway</p>
         <nav class="socialmedia">
             <a href="https://www.instagram.com/">
                 <img src="images/instagram.svg" alt="instagram logo">
