Made some changes to my title and css code

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhiteWater Rafting Co.</title>
-    <meta name="description" content="This is a webpage about a white water rafting company. Using this website and company allows you to book trips for white water rafting, camping, hiking, and similar activities. It also provides information about the company itself and its credentials to ensure you have an enjoyable experience using their services.">
+    <title>WhiteWater Rafting Co. - About Us</title>
+    <meta name="description" content="This webpage tells you about the company and the services it provides. It also shares information about customer satisfaction.">
     <meta name="author" content="Cameron Galloway">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -28,7 +28,7 @@
             <h1>WhiteWater Rafting Co.</h1>
             <article>
                 <img src="images/happy-clients.jpg" alt="A photograph of eleven people. Five of them are wearing yellow vests, four are wearing red vests, and two are wearing orange vests. All of the people are wearing wetsuits of varying sizes and colors. Four of them are holding oars in their hands in varying positions.">
-                <p>Company Purpose: Enjoy outdoors like never before!</p>
+                <p>At Whitewater Rafting Co., our purpose is to share the thrill of whitewater rafting while fostering a deep respect for nature and teamwork. We provide safe, unforgettable river adventures that connect people to the outdoors, inspire confidence, and create lasting memories—one rapid at a time.</p>
             </article>
         </div>
         <section>
