Added grid and flex

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,9 @@
     <meta name="author" content="Cameron Galloway">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
+
     <header>
         <nav>
             <a href="#">Home</a>
@@ -17,23 +20,29 @@
             <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Cameron Galloway | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Cameron Galloway" width="200">
-        <p>Hello I am Cameron Galloway. I am from Utah, USA. I am a Furniture Finisher (stain and lacquer furniture) for The Church of Jesus Christ of Latter-day Saints. I enjoy riding my bikes, both my peddal and motorcycle, when the weather is good. I also enjoys hiking in the mountians around Utah, diving into a good book, playing Dungeons & Dragons, and playing video games with my friends and family.</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/nuku'alofa-tonga-temple?lang=eng" target="_blank">Nuku'alofa Tonga Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/bountiful-utah-temple?lang=eng" target="_blank">Bountiful Utah Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Utah, USA</h2>
-        <img src="images/bryce-canyon.jpg" alt="Bryce Canyon">
-        <p>Utah is a western U.S. state known for its striking natural landscapes, rich history, and outdoor recreation. It features diverse geography ranging from the snow-capped peaks of the Wasatch Mountains to the red rock deserts and dramatic arches of the south. Utah’s blend of natural beauty, adventure, and heritage makes it a unique and captivating place.</p>
-    </aside>
+
+    <div class="grid">
+        <main>
+            <h1>Cameron Galloway | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Cameron Galloway" width="200">
+            <p>Hello I am Cameron Galloway. I am from Utah, USA. I am a Furniture Finisher (stain and lacquer furniture) for The Church of Jesus Christ of Latter-day Saints. I enjoy riding my bikes, both my peddal and motorcycle, when the weather is good. I also enjoys hiking in the mountians around Utah, diving into a good book, playing Dungeons & Dragons, and playing video games with my friends and family.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/nuku'alofa-tonga-temple?lang=eng" target="_blank">Nuku'alofa Tonga Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/bountiful-utah-temple?lang=eng" target="_blank">Bountiful Utah Temple</a></li>
+            </ul>
+        </main>
+
+        <aside class="box">
+            <h2>Utah, USA</h2>
+            <img src="images/bryce-canyon.jpg" alt="Bryce Canyon">
+            <p>Utah is a western U.S. state known for its striking natural landscapes, rich history, and outdoor recreation. It features diverse geography ranging from the snow-capped peaks of the Wasatch Mountains to the red rock deserts and dramatic arches of the south. Utah’s blend of natural beauty, adventure, and heritage makes it a unique and captivating place.</p>
+        </aside>
+    </div>
+
     <footer>
         <p>&copy; 2025 | Cameron Galloway | Utah</p>
     </footer>
+
 </body>
 </html>
