--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <img src="images/wwr-logo-crossed-oars.png" alt="A picture of the ends of four oars arranged in a cross shape. In the middle of the cross is a hexagon containing an image of five human figures inside a raft, each holding an oar. The raft is on a river and appears to be moving. The words White Water Rafting appear below the people in the raft, but still inside the hexagon. The year 1993 and the word Since are shown on either side of the hexagon in small print.">
+        <div class="logo"><img src="images/wwr-logo-crossed-oars.png" alt="A picture of the ends of four oars arranged in a cross shape. In the middle of the cross is a hexagon containing an image of five human figures inside a raft, each holding an oar. The raft is on a river and appears to be moving. The words White Water Rafting appear below the people in the raft, but still inside the hexagon. The year 1993 and the word Since are shown on either side of the hexagon in small print."></div>
         <nav>
-            <ul>
+            <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -34,12 +34,27 @@
         <section>
             <h2>History</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam molestiae nam voluptas similique tempora quaerat, inventore eaque quisquam deserunt, iusto beatae mollitia in numquam, id corporis necessitatibus nemo nulla itaque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum expedita vero hic, quas doloribus facere impedit atque excepturi error maxime distinctio quod voluptates adipisci! Aspernatur, voluptates tempore. Tempora, alias dolor.</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
+            <div class="fig">
+                <figure>
+                    <img src="images/american_river.jpg" alt="River rafters going down the American River">
+                    <figcaption>American River Rapids</figcaption>
+                    <img src="images/colorado_river.jpg" alt="River rafters going down the Colorado River">
+                    <figcaption>Going down the Colorado River</figcaption>
+                    <img src="images/ocoee_river.jpg" alt="River rafters going down the Ocoee River">
+                    <figcaption>Ocoee Rapids in Tennessee</figcaption>
+                    <img src="images/salmon_river.jpg" alt="River rafters going down the Salmon River">
+                    <figcaption>Salmon River Rapid Adventure</figcaption>
+                    <img src="images/snake_river.jpg" alt="River rafters going down the Snake River">
+                    <figcaption>Snake River</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
-    <footer>
+    <footer class="foot">
         <p>&copy;2025 - WhiteWater Rafting Co. - Cameron Galloway</p>
         <nav class="socialmedia">
             <a href="https://www.instagram.com/">
