changed css to fit wireframe

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,10 +31,13 @@
                 <p>At Whitewater Rafting Co., our purpose is to share the thrill of whitewater rafting while fostering a deep respect for nature and teamwork. We provide safe, unforgettable river adventures that connect people to the outdoors, inspire confidence, and create lasting memories—one rapid at a time.</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam molestiae nam voluptas similique tempora quaerat, inventore eaque quisquam deserunt, iusto beatae mollitia in numquam, id corporis necessitatibus nemo nulla itaque.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum expedita vero hic, quas doloribus facere impedit atque excepturi error maxime distinctio quod voluptates adipisci! Aspernatur, voluptates tempore. Tempora, alias dolor.</p>
+            <div class="helmets">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam molestiae nam voluptas similique tempora quaerat, inventore eaque quisquam deserunt, iusto beatae mollitia in numquam, id corporis necessitatibus nemo nulla itaque.</p>
+                <img src="images/about_us.jpg" alt="A picture of a raft with four helmets of different colors">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum expedita vero hic, quas doloribus facere impedit atque excepturi error maxime distinctio quod voluptates adipisci! Aspernatur, voluptates tempore. Tempora, alias dolor.</p>
+            </div>
         </section>
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
@@ -42,12 +45,20 @@
                 <figure>
                     <img src="images/american_river.jpg" alt="River rafters going down the American River">
                     <figcaption>American River Rapids</figcaption>
+                </figure>
+                <figure>
                     <img src="images/colorado_river.jpg" alt="River rafters going down the Colorado River">
                     <figcaption>Going down the Colorado River</figcaption>
+                </figure>
+                <figure>
                     <img src="images/ocoee_river.jpg" alt="River rafters going down the Ocoee River">
                     <figcaption>Ocoee Rapids in Tennessee</figcaption>
+                </figure>
+                <figure>
                     <img src="images/salmon_river.jpg" alt="River rafters going down the Salmon River">
                     <figcaption>Salmon River Rapid Adventure</figcaption>
+                </figure>
+                <figure>
                     <img src="images/snake_river.jpg" alt="River rafters going down the Snake River">
                     <figcaption>Snake River</figcaption>
                 </figure>
