--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -38,7 +38,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12222.936237561758!2d-105.29571245962433!3d40.01438753090803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b8d4e278dafd3%3A0xc8393b7ca01b8058!2sBoulder%2C%20CO!5e0!3m2!1sen!2sus!4v1764351309336!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <form action="">
+        <form>
             <div class="form-group">
                 <label for="fullname">Full Name:</label>
                 <input type="text" name="fullname" id="fullname" required>
@@ -48,7 +48,7 @@
                 <input type="email" name="email" id="email" required>
             </div>
             <div class="form-group">
-                <label for="radio">Message Purpose:</label>
+                <label>Message Purpose:</label>
                 <div class="radio-group">
                     <input type="radio" name="radio" id="general-inquiry" required>
                     <label for="general-inquiry">General Inquiry</label>
@@ -74,15 +74,15 @@
             <h2>We Are Here to Help</h2>
             <div class="fig">
                 <figure>
-                    <img src="images/Oliver-Hayes.jpg" alt="River rafters going down the American River">
+                    <img src="images/oliver-hayes.jpg" alt="River rafters going down the American River">
                     <figcaption>Oliver Hayes:<br>Lead River Guid</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Ethan-Caldwell.jpg" alt="River rafters going down the Colorado River">
+                    <img src="images/ethan-caldwell.jpg" alt="River rafters going down the Colorado River">
                     <figcaption>Ethan Caldwell:<br>Rafting Safety Coordinator</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Lucas-Grant.jpg" alt="River rafters going down the Ocoee River">
+                    <img src="images/lucas-grant.jpg" alt="River rafters going down the Ocoee River">
                     <figcaption>Lucas Grant:<br>Guest Services Manager</figcaption>
                 </figure>
             </div>
