--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -74,15 +74,15 @@
             <h2>We Are Here to Help</h2>
             <div class="fig">
                 <figure>
-                    <img src="images/oliver-hayes.jpg" alt="River rafters going down the American River">
+                    <img src="images/oliver-hayes.jpg" alt="A picture of a man wearing a hard hat and gripping an edge with one hand">
                     <figcaption>Oliver Hayes:<br>Lead River Guid</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/ethan-caldwell.jpg" alt="River rafters going down the Colorado River">
+                    <img src="images/ethan-caldwell.jpg" alt="A black-and-white photo of a man holding a post in nature">
                     <figcaption>Ethan Caldwell:<br>Rafting Safety Coordinator</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/lucas-grant.jpg" alt="River rafters going down the Ocoee River">
+                    <img src="images/lucas-grant.jpg" alt="A sepia-toned photo of a man smiling outdoors">
                     <figcaption>Lucas Grant:<br>Guest Services Manager</figcaption>
                 </figure>
             </div>
