--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,45 +23,54 @@
     </header>
     
     <main>
-        <section class="hero">
+        <div class="hero">
             <img src="images/hero_main.jpg" alt="A group of four people with oars traversing a white-water river rapid">
-            <h1>Adventure Starts Here</h1>
-        </section>
+            <h1>Welcome to WhiteWater Rafting Co.</h1>
+            <h2>Where Every Rapid is a Story</h2>
 
-        <section class="newsletter">
-            <h1>Sign up for our newsletter!</h1>
-            <form action="#">
-                <fieldset>
-                    <label for="fullname">Full Name:</label>
-                    <input type="text" name="fullname" id="fullname">
+            <div class="hero-newsletter">
+                <h3>Sign up for our newsletter!</h3>
+                <form action="#">
+                    <fieldset>
+                        <label for="fullname">Full Name:</label>
+                        <input type="text" name="fullname" id="fullname">
 
-                    <label for="email">Email Address:</label>
-                    <input type="email" name="email" id="email">
+                        <label for="email">Email Address:</label>
+                        <input type="email" name="email" id="email">
 
-                    <button type="submit" class="submit">Subscribe</button>
-                </fieldset>
-            </form>
-        </section>
+                        <button type="submit" class="submit">Subscribe</button>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+
+        
 
         <section class="action-call">
             <h2>Adventure Awaits!</h2>
             <a href="trips.html">
-                <button>Explore Trips</button>
+                <button>Click Here or Below to Look at Available Trips</button>
             </a>
         </section>
 
         <section class="grid">
             <div>
                 <img src="images/rapid_tours.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
-                <a href="contact.html">Whitewater Rapid Tours</a>
+                <a href="trips.html">
+                    <button>Whitewater Rapid Tours</button>
+                </a>
             </div>
             <div>
                 <img src="images/river_tours.jpg" alt="A group of people in a raft going down a fairly calm river. Serene wilderness surrounds the river.">
-                <a href="contact.html">River Tours</a>
+                <a href="trips.html">
+                    <button>River Tours</button>
+                </a>
             </div>
             <div>
                 <img src="images/camping.jpg" alt="A tent, campfire, and hammock are set up in a serene location. The campsite overlooks a forest and a lake.">
-                <a href="contact.html">Camping Sites</a>
+                <a href="trips.html">
+                    <button>Camping Sites</button>
+                </a>
             </div>
         </section>
     </main>
