changed html and css for wwr site

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,14 +31,16 @@
                 <p>At Whitewater Rafting Co., our purpose is to share the thrill of whitewater rafting while fostering a deep respect for nature and teamwork. We provide safe, unforgettable river adventures that connect people to the outdoors, inspire confidence, and create lasting memories—one rapid at a time.</p>
             </article>
         </div>
+
         <section class="history">
             <h2>History</h2>
             <div class="helmets">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam molestiae nam voluptas similique tempora quaerat, inventore eaque quisquam deserunt, iusto beatae mollitia in numquam, id corporis necessitatibus nemo nulla itaque.</p>
+                <p>Whitewater Rafting Co. began in 1978 as a small, family-run outfitter operating out of a single riverside cabin in the Pacific Northwest. Founded by brothers Jack and Samuel Carter—both former park rangers with a passion for river conservation—the company originally offered modest weekend float trips for local adventurers. Word of their deep river knowledge and emphasis on safety spread quickly, drawing outdoor enthusiasts from neighboring states. By the mid-1980s, Whitewater Rafting Co. had expanded its operations to include guided whitewater expeditions, wilderness camping trips, and seasonal training programs for aspiring river guides.</p>
                 <img src="images/about_us.jpg" alt="A picture of a raft with four helmets of different colors">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum expedita vero hic, quas doloribus facere impedit atque excepturi error maxime distinctio quod voluptates adipisci! Aspernatur, voluptates tempore. Tempora, alias dolor.</p>
+                <p>Throughout the 1990s and early 2000s, the company grew into one of the region’s most respected rafting outfitters, earning recognition for its eco-friendly practices and community involvement. Whitewater Rafting Co. partnered with conservation groups to protect local river ecosystems and introduced innovative raft designs that improved stability without sacrificing excitement. Today, the company operates multiple outposts along major rivers and continues to uphold its founders’ mission: to provide unforgettable, responsible adventure experiences that inspire a lifelong love of the outdoors.</p>
             </div>
         </section>
+
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <div class="fig">
@@ -65,6 +67,7 @@
             </div>
         </section>
     </main>
+
     <footer class="foot">
         <p>&copy;2025 - WhiteWater Rafting Co. - Cameron Galloway</p>
         <nav class="socialmedia">
