changed names to be better, and made sure color contrast is good

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -36,7 +36,7 @@
             <h2>History</h2>
             <div class="helmets">
                 <p>Whitewater Rafting Co. began in 1978 as a small, family-run outfitter operating out of a single riverside cabin in the Pacific Northwest. Founded by brothers Jack and Samuel Carter—both former park rangers with a passion for river conservation—the company originally offered modest weekend float trips for local adventurers. Word of their deep river knowledge and emphasis on safety spread quickly, drawing outdoor enthusiasts from neighboring states. By the mid-1980s, Whitewater Rafting Co. had expanded its operations to include guided whitewater expeditions, wilderness camping trips, and seasonal training programs for aspiring river guides.</p>
-                <img src="images/about_us.jpg" alt="A picture of a raft with four helmets of different colors">
+                <img src="images/about-us.jpg" alt="A picture of a raft with four helmets of different colors">
                 <p>Throughout the 1990s and early 2000s, the company grew into one of the region’s most respected rafting outfitters, earning recognition for its eco-friendly practices and community involvement. Whitewater Rafting Co. partnered with conservation groups to protect local river ecosystems and introduced innovative raft designs that improved stability without sacrificing excitement. Today, the company operates multiple outposts along major rivers and continues to uphold its founders’ mission: to provide unforgettable, responsible adventure experiences that inspire a lifelong love of the outdoors.</p>
             </div>
         </section>
@@ -45,23 +45,23 @@
             <h2>Adventure Awaits You!</h2>
             <div class="fig">
                 <figure>
-                    <img src="images/american_river.jpg" alt="River rafters going down the American River">
+                    <img src="images/american-river.jpg" alt="River rafters going down the American River">
                     <figcaption>American River Rapids</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/colorado_river.jpg" alt="River rafters going down the Colorado River">
+                    <img src="images/colorado-river.jpg" alt="River rafters going down the Colorado River">
                     <figcaption>Going down the Colorado River</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/ocoee_river.jpg" alt="River rafters going down the Ocoee River">
+                    <img src="images/ocoee-river.jpg" alt="River rafters going down the Ocoee River">
                     <figcaption>Ocoee Rapids in Tennessee</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/salmon_river.jpg" alt="River rafters going down the Salmon River">
+                    <img src="images/salmon-river.jpg" alt="River rafters going down the Salmon River">
                     <figcaption>Salmon River Rapid Adventure</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/snake_river.jpg" alt="River rafters going down the Snake River">
+                    <img src="images/snake-river.jpg" alt="River rafters going down the Snake River">
                     <figcaption>Snake River</figcaption>
                 </figure>
             </div>
