--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,7 +24,7 @@
     
     <main>
         <div class="hero">
-            <img src="images/hero_main.jpg" alt="A group of four people with oars traversing a white-water river rapid">
+            <img src="images/hero-main.jpg" alt="A group of four people with oars traversing a white-water river rapid">
             <h1>Welcome to WhiteWater Rafting Co.</h1>
             <h2>Where Every Rapid is a Story</h2>
 
@@ -53,13 +53,13 @@
 
         <section class="grid">
             <div>
-                <img src="images/rapid_tours.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                <img src="images/rapid-tours.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
                 <a href="trips.html">
                     <button>Whitewater Rapid Tours</button>
                 </a>
             </div>
             <div>
-                <img src="images/river_tours.jpg" alt="A group of people in a raft going down a fairly calm river. Serene wilderness surrounds the river.">
+                <img src="images/river-tours.jpg" alt="A group of people in a raft going down a fairly calm river. Serene wilderness surrounds the river.">
                 <a href="trips.html">
                     <button>River Tours</button>
                 </a>
