--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -25,7 +25,7 @@
     <main>
         <section class="trip-title">
             <div class="trip-title-img">
-                <img src="images/trip_complete.jpg" alt="An image of several people on rafts holding their oars in the air. They appear to have just finished a rafting trip and look pleased">
+                <img src="images/trip-complete.jpg" alt="An image of several people on rafts holding their oars in the air. They appear to have just finished a rafting trip and look pleased">
             </div>
 
             <div class="trip-title-text">
@@ -40,17 +40,17 @@
         <section class="trips">
             <div class="div-trips">
                 <article>
-                <img src="images/trip_3.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                <img src="images/trip-3.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
                 <h2>Gauley River - West Virginia</h2>
                 <p>● Known for its intense rapids, especially during the “Gauley Season.”<br>● A top destination for adrenaline-packed whitewater rafting.</p>
                 </article>
                 <article>
-                <img src="images/trip_1.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                <img src="images/trip-1.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
                 <h2>Colorado River - Arizona</h2>
                 <p>● Iconic trip through the Grand Canyon with dramatic rapids and stunning canyon views.<br>● Offers multi-day trips for adventure seekers.</p>
                 </article>
                 <article>
-                <img src="images/trip_2.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
+                <img src="images/trip-2.jpg" alt="An image of a group of people holding oars, going down a whitewater rapid. A large volume of water is crashing over them.">
                 <h2>Snake River - Idaho</h2>
                 <p>● Features thrilling rapids and scenic wilderness in North America’s deepest river gorge.<br>● Good mix of challenging rapids and calmer stretches.</p>
                 </article>
